# notepadqq

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure
.devcontainer/: devcontainer.json
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
.travis/: macos-script.sh
.travis/tools/macdeployqtfix/: macdeployqtfix.py
build-tools/macdeployqtfix/: macdeployqtfix.py
snap/: snapcraft.yaml
src/ui/: CMakeLists.txt  Info.plist  docengine.cpp  globals.cpp  keygrabber.cpp  main.cpp  mainwindow.cpp  singleapplication.cpp  ui.pro
src/ui-tests/: ui-tests.pro
src/ui/EditorNS/: bannerbasicmessage.cpp  customqwebview.cpp  editor.cpp
src/ui/Extensions/: extension.cpp  installextension.cpp
src/ui/Extensions/Stubs/: stub.cpp
src/ui/Search/: advancedsearchdock.cpp  filereplacer.cpp  frmsearchreplace.cpp
src/ui/Sessions/: sessions.cpp
src/ui/include/: mainwindow.h  notepadqq.h  nqqrun.h  nqqsettings.h  singleapplication.h  topeditorcontainer.h
src/ui/include/EditorNS/: editor.h
src/ui/include/Search/: advancedsearchdock.h
support_files/: notepadqq.appdata.xml
